CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LU)
AUX_SOURCE_DIRECTORY(./src LU_SRC_LIST)
INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(./src)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${LU_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${LU_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${LU_SRC_LIST})
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release lib")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug lib")
ENDIF()
SET(LIBRARY_OUTPUT_PATH ${LU_BINARY_DIR}/bin)
ADD_LIBRARY(lu STATIC ${LU_SRC_LIST})
